# documentation-agent

./: .env.example  .gitignore  DEMO-RUNBOOK.md  DEPLOY.md  README.md  block_kit.py  confluence_client.py  main.py  pyproject.toml  pytest.ini  requirements.txt  slack_client.py  storage.py
.github/workflows/: ci.yml  deploy.yml
demo/: post-threads.py  reset-confluence.py  reset-storage.py  reset-threads.py  seed-confluence.py
demo/threads/: thread-a-incident.md  thread-b-qa.md  thread-c-howto.md
doco_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
extraction/: models.py  prompts.py
infra/aws/api-lambda/: Cargo.toml  deny.toml
infra/aws/api-lambda/src/: main.rs
infra/aws/cdk/: app.py  bootstrap-policy.json  cdk.json  deploy-policy.json  doco_agent_stack.py  requirements.txt
presentation/: slides-minimal.html  slides-minimal.md  slides.html
presentation/diagrams/: component-flow.mmd  pattern-flow.mmd
schema-validation/extractions/: extraction-a-incident.json  extraction-b-qa.json  extraction-c-howto.json  extraction-d-sparse.json
schema-validation/threads/: thread-c-howto.md  thread-d-sparse.md
scripts/: teardown.sh
src/: block_kit.py  confluence_client.py  pipeline.py  slack_client.py  ssm_config.py  storage_old.py
src/adapters/: aws_lambda_worker.py  fastapi_app.py
src/extraction/: extractor.py  prompts.py
src/storage/: __init__.py  aws_dynamodb.py  base.py  memory.py
tests/: conftest.py  e2e_pipeline.py  test_aws_lambda_worker.py  test_cdk_stack.py  test_extractor.py  test_pipeline.py  test_ssm_config.py  test_storage_contract.py
