[package]
name = "api-lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = "0.13"
lambda_runtime = "0.13"
tokio = { version = "1", features = ["macros"] }
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-sqs = "1"
hmac = "0.12"
sha2 = "0.10"
subtle = "2"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
url = "2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
